<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_config_cuenta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.eisusquiza.mascotas.ActivityConfigCuenta"
    android:orientation="vertical"
    >

    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar"
        ></include>




        <TextView
            android:id="@+id/tvappnameConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="50dp"
            android:textStyle="italic"
            android:textSize="30dp"
            android:textAlignment="center"
            />



    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtusuario"
            android:id="@+id/usuario"
            android:textAlignment="center"
            />

    </android.support.design.widget.TextInputLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvUsuariosSandbox"
        android:text="@string/UsuariosSandbox"
        android:layout_marginLeft="10sp"
        />

    <Button
        android:id="@+id/btnGuardarCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar_cuenta"
        android:theme="@style/MiBotonRaised"
        android:layout_marginTop="100dp"
        android:onClick="guardarCuenta"

        />


</LinearLayout>





